# BRICS_RN

./: .gitignore  BRICS_RN.doxyfile  README
doc/: bibliography.dox  examples.dox  examples_install.dox  examples_old.dox  installation.dox  introduction.dox  main.dox  quickstart.dox  tutorials.dox  worldmodel.dox
doc/.svn/: all-wcprops  dir-prop-base  entries
doc/html/: AttributeFinder_8cpp.html  AttributeFinder_8cpp__incl.map  AttributeFinder_8cpp__incl.md5  AttributeFinder_8cpp_source.html  AttributeFinder_8h.html  AttributeFinder_8h__dep__incl.map  AttributeFinder_8h__dep__incl.md5  AttributeFinder_8h__incl.map  AttributeFinder_8h__incl.md5  AttributeFinder_8h_source.html  Attribute_8cpp.html  Attribute_8cpp__incl.map  Attribute_8cpp__incl.md5  Attribute_8cpp_source.html  Attribute_8h.html  Attribute_8h__dep__incl.map  Attribute_8h__dep__incl.md5  Attribute_8h__incl.md5  Attribute_8h_source.html  Benchmark_8cpp.html  Benchmark_8cpp__incl.map  Benchmark_8cpp__incl.md5  Benchmark_8cpp_source.html  Benchmark_8h.html  Benchmark_8h__dep__incl.map  Benchmark_8h__dep__incl.md5  Benchmark_8h__incl.md5  Benchmark_8h_source.html  BoundingBox3DExtractor_8cpp.html  BoundingBox3DExtractor_8cpp__incl.map  BoundingBox3DExtractor_8cpp__incl.md5  BoundingBox3DExtractor_8cpp_source.html  BoundingBox3DExtractor_8h.html  BoundingBox3DExtractor_8h__dep__incl.map  BoundingBox3DExtractor_8h__dep__incl.md5  BoundingBox3DExtractor_8h__incl.md5  BoxROIExtractor_8cpp.html  (+3055 more)
examples/amr/amr_stage/: CMakeLists.txt  Makefile  README.md  manifest.xml
examples/amr/amr_stage/cfg/: Stage.cfg
examples/amr/amr_stage/include/amr_stage/: base.h  laser.h  ranger.h  sonar.h
examples/amr/amr_stage/launch/: stage.launch
examples/amr/amr_stage/nodes/: ranges_republisher.py  stage.cpp
examples/amr/amr_stage/src/: base.cpp  laser.cpp  ranger.cpp  sonar.cpp
external-libraries/: get-newer-kdl.sh
navigation_trajectory_common/: CMakeLists.txt  Makefile  manifest.xml
navigation_trajectory_follower/: CMakeLists.txt  Makefile  manifest.xml
navigation_trajectory_msgs/: CMakeLists.txt
navigation_trajectory_planner/: CMakeLists.txt  manifest.xml
sandbox/ros_navigation/navigation_trajectory_follower/: .gitignore  CMakeLists.txt  Makefile  manifest.xml
sandbox/ros_navigation/navigation_trajectory_follower/include/navigation_trajectory_follower/: ConversionUtils.h  Trajectory.h  TrajectoryFollowerNode.h
sandbox/ros_navigation/navigation_trajectory_follower/launch/: trajectory_follower.launch
sandbox/ros_navigation/navigation_trajectory_follower/src/: TrajectoryFollowerNode.cpp  VelocityProfile_Line.cpp  VelocityProfile_Line.h  VelocityProfile_Trap.cpp  VelocityProfile_Trap.h
sandbox/ros_navigation/navigation_trajectory_follower/src/omnidrive_controller/: CMakeLists.txt  ConversionUtils.h  KinematicsModel.h  Odometry.cpp  Odometry.h  OmniDriveKinematicsModel.cpp  OmniDriveKinematicsModel.h  OmniDrivePositionController.cpp  OmniDrivePositionController.h  Pose2D.cpp  Pose2D.h  PositionController.h  Twist2D.cpp  Twist2D.h  VelocityRamp.cpp  VelocityRamp.h
(+204 files in other folders)
